--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.twig
@@ -1,15 +1,18 @@
-<div class="grid">
-  <div class="cta-banner">
-    <div class="cta-banner__image">
-      {% include "@molecules/image-background/image-background.twig" with {
-        "img.src": img.src,
-        "img.src": img.alt,
-        "classes": classes,
-      } %}
-    </div>
-    <div class="cta-banner__content">
-      <button class="button button--alt" type="submit">Chat with Us</button>
-      <p>{{ text }}</p>
-    </div>
+<section class="cta-banner">
+  <div class="cta-banner__image">
+    {% include "@molecules/image-background/image-background.twig" with {
+      "img.src": img.src,
+      "img.src": img.alt,
+      "classes": classes,
+    } %}
   </div>
-</div>
+  <div class="cta-banner__content">
+    <button class="button button--alt" type="submit">Chat with Us</button>
+    <h2 class="cta-banner__title">
+      <span>{{ title_1 }}</span>
+      {% if title_2 %}
+      <span>{{ title_2 }}</span>
+      {% endif %}
+    </h2>
+  </div>
+</section>
