--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
@@ -28,7 +28,7 @@
     }
 
     .title {
-      font-size: 0.9em;
+      font-size: 2em;
       letter-spacing: 0.02em;
       line-height: 1em;
       text-transform: uppercase;
@@ -37,24 +37,15 @@
       margin: 0;
       text-align: center;
 
-      @include breakpoint("425px") {
-        font-size: 1.25em;
-      }
-
-      @include breakpoint("500px") {
-        font-size: 1.5em;
-      }
-
-      @include breakpoint("775px") {
-        font-size: 2em;
+      @include breakpoint($bp2) {
+        font-size: 3em;
       }
 
       @include breakpoint($bp3) {
-        font-size: 3em;
         text-align: left;
       }
 
-      @include breakpoint("1300px") {
+      @include breakpoint($bp4) {
         font-size: 4em;
       }
 
@@ -72,16 +63,8 @@
       text-align: center;
 
       @include breakpoint($bp2) {
-        font-size: 1em;
-        line-height: 1em;
-      }
-
-      @include breakpoint("675px") {
         font-size: 1.25em;
-      }
-
-      @include breakpoint("775px") {
-        font-size: 1.5em;
+        line-height: 1em;
       }
 
       @include breakpoint($bp3) {
@@ -90,7 +73,7 @@
         text-align: left;
       }
 
-      @include breakpoint("1300px") {
+      @include breakpoint($bp4) {
         font-size: 2em;
       }
 
@@ -122,13 +105,12 @@
   .cta-banner-list__buttons {
     display: flex;
     flex-direction: column;
-    padding-right: 2em;
-    margin-left: 5em;
     position: relative;
     width: 100%;
 
     @include breakpoint($bp3) {
       margin-left: 2em;
+      padding-right: 2em;
       width: auto;
     }
 
@@ -154,8 +136,13 @@
       font-weight: 600;
       border-radius: 5px;
       width: 400px;
+      max-width: 100%;
       height: 124px;
-      margin: 0.5em 0;
+      margin: 0.5em auto;
+
+      @include breakpoint($bp3) {
+        margin: 0.5em 0;
+      }
 
       &:first-of-type {
         margin-top: 0;
