--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
@@ -14,6 +14,7 @@
   <div class="cta-banner-list__buttons">
     {% for link in links %}
       <a href="{{ link.url }}">
+        <img src="{{ link.icon }}"
         <span>{{ link.text }}</span>
       </a>
     {% endfor %}
