--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -26,7 +26,7 @@
     width: 96%;
     padding: 2em;
     margin-top: 40%;
-    box-shadow: 0px 2px 8px rgba($black, 0.15);
+    box-shadow: 0 2px 8px rgba($black, 0.15);
 
     @include breakpoint($bp0) {
       width: 90%;
@@ -48,7 +48,7 @@
     }
 
     @include breakpoint($bp4) {
-      padding: 3em 50% 3em 2em;;
+      padding: 3em 50% 3em 2em;
     }
 
     h1 {
@@ -229,7 +229,7 @@
 
     @include breakpoint($bp5) {
       top: -8em;
-      right: calc(( 100vw - 1600px ) / 2 * -1 );
+      right: calc(( 100vw - 1600px ) / 2 * -1);
     }
   }
 }
