TH-352 button styles

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
@@ -14,7 +14,7 @@
   <div class="cta-banner-list__buttons">
     {% for link in links %}
       <a href="{{ link.url }}">
-        <img src="{{ link.icon }}"
+        {% include link.icon %}
         <span>{{ link.text }}</span>
       </a>
     {% endfor %}
