--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
@@ -120,9 +120,13 @@
       position: absolute;
       top: 50px;
       bottom: 50px;
-      left: 15%;
+      left: 33%;
       width: 100%;
       z-index: -5;
+
+      @include breakpoint($bp3) {
+        left: 15%;
+      }
     }
 
     a {
@@ -139,6 +143,7 @@
       max-width: 100%;
       height: 124px;
       margin: 0.5em auto;
+      position: relative;
 
       @include breakpoint($bp3) {
         margin: 0.5em 0;
@@ -150,6 +155,13 @@
 
       &:last-of-type {
         margin-bottom: 0;
+      }
+
+      svg {
+        position: absolute;
+        left: -40px;
+        max-width: 80px;
+        max-height: 80px;
       }
     }
   }
