--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
@@ -10,6 +10,7 @@
     {% if subtitle %}
       <p class="subtitle">{{ subtitle }}</p>
     {% endif %}
+    <img src="../../images/th-mark.svg" />
   </div>
   <div class="cta-banner-list__buttons">
     {% for link in links %}
