TH-352 green border adjustments

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
@@ -88,17 +88,21 @@
       position: absolute;
       top: 0;
       height: 10px;
-      width: 85%;
+      width: 115%;
       left: -5em;
       background-color: $growth;
       border-radius: 5px;
 
+      @include breakpoint($bp2) {
+        width: 100%;
+      }
+
       @include breakpoint($bp3) {
-        width: 55%;
+        width: 85%;
       }
 
       @include breakpoint($bp5) {
-        left: calc(-1 * ((100% - 1600px) / 2));
+        width: 100%;
       }
     }
 
