--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
@@ -8,224 +8,137 @@
   @include breakpoint($bp3) {
     flex-wrap: nowrap;
   }
+}
 
-  .cta-banner-list__text {
-    padding: 3em 0;
-    width: 100%;
-    position: relative;
-
-    @include breakpoint($bp2) {
-      padding: 2em;
-      padding-top: 5em;
-    }
-
-    @include breakpoint($bp3) {
-      padding: 5em 2em;
-      width: 55%;
-    }
-
-    @include breakpoint($bp4) {
-      padding: 5em;
-    }
-
-    .title {
-      font-size: 2em;
-      letter-spacing: 0.02em;
-      line-height: 1em;
-      text-transform: uppercase;
-      font-weight: 600;
-      color: $primary-dark;
-      margin: 0;
-      text-align: center;
-
-      @include breakpoint($bp2) {
-        font-size: 3em;
-      }
-
-      @include breakpoint($bp3) {
-        text-align: left;
-      }
-
-      @include breakpoint($bp4) {
-        font-size: 4em;
-      }
-
-      @include breakpoint($bp5) {
-        font-size: 5em;
-      }
-
-      &.third {
-        color: $trust-aa;
-      }
-    }
-
-    .subtitle {
-      letter-spacing: 0.05em;
-      text-align: center;
-
-      @include breakpoint($bp2) {
-        font-size: 1.25em;
-        line-height: 1em;
-      }
-
-      @include breakpoint($bp3) {
-        font-size: 1.5em;
-        line-height: 1.25em;
-        text-align: left;
-      }
-
-      @include breakpoint($bp4) {
-        font-size: 2em;
-      }
-
-      @include breakpoint($bp5) {
-        font-size: 2.25em;
-      }
-    }
-
-    &::before {
-      content: " ";
-      position: absolute;
-      top: 0;
-      height: 10px;
-      width: 115%;
-      left: -5em;
-      background-color: $growth;
-      border-radius: 5px;
-
-      @include breakpoint($bp2) {
-        width: 100%;
-      }
-
-      @include breakpoint($bp3) {
-        width: 85%;
-      }
-
-      @include breakpoint($bp5) {
-        width: 100%;
-      }
-    }
-
-    img {
-      display: none;
-      position: absolute;
-      opacity: 50%;
-      z-index: -10;
-
-      @include breakpoint($bp3) {
-        display: block;
-        top: -20%;
-        left: 0;
-        width: 600px;
-      }
-
-      @include breakpoint($bp4) {
-        top: -40%;
-        left: 3em;
-        width: 800px;
-      }
-
-      @include breakpoint("1400px") {
-        left: 10em;
-      }
-
-      @include breakpoint($bp5) {
-        left: 15em;
-        width: 1000px;
-      }
+.cta-banner-list__content {
+  border-top: 6px solid $growth;
+  padding: 2em 0;
+  width: 100%;
+  position: relative;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    height: 1px;
+    border-top: 6px solid $growth;
+    left: -2em;
+    width: 2em;
+    top: -6px;
+    
+    @include breakpoint($bp5) {
+      width: calc( 2em + (100vw - 1600px) );
+      left: calc( -2em - (100vw - 1600px) );
     }
   }
 
-  .cta-banner-list__buttons {
-    display: flex;
-    flex-direction: column;
-    position: relative;
+  @include breakpoint($bp3) {
+    padding: 5em 0;
+    width: 60%;
+    max-width: 55%;
+  }
+}
+
+.cta-banner-list__title {
+  @include adjust-font-size-to($text, .6);
+  text-transform: uppercase;
+  font-weight: 600;
+  color: $primary-dark;
+  word-wrap: break-word;
+  margin: 0;
+  
+  span {
+    display: block;
+  }
+
+  &.third {
+    color: $trust-aa;
+  }
+  @include breakpoint($bp1) {
+    @include adjust-font-size-to($sm-heading, .9);
+  }
+  
+  @include breakpoint($bp2) {
+    @include adjust-font-size-to($md-heading, 1);
+  }
+  
+  @include breakpoint($bp4) {
+    @include adjust-font-size-to($xl-heading, 1.25);
+  }
+}
+
+.cta-banner-list__subtitle {
+  
+  @include breakpoint(0 $bp2) {
+    @include adjust-font-size-to($sm-heading, .9);
+  }
+}
+
+.cta-banner-list__background {
+  width: 100%;
+  position: absolute;
+  opacity: 40%;
+  z-index: -10;
+  top: -20%;
+  left: -20%;
+  
+  @include breakpoint($bp2) {
+    width: 60%;
+    left: 10%;
+  }
+
+  @include breakpoint($bp3) {
     width: 100%;
+    top: -20%;
+    left: 0;
+  }
 
+  @include breakpoint($bp4) {
+    top: -40%;
+    left: 20%;
+  }
+}
+
+.cta-banner-list__buttons {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  
+  @include breakpoint($bp2 $bp3) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+    .icon-button {
+      width: 43%;
+    }
+  }
+
+  @include breakpoint($bp3) {
+    width: 33%;
+    margin-left: auto;
+  }
+
+  &::after {
+    content: " ";
+    background-color: $primary-dark;
+    position: absolute;
+    top: 50px;
+    bottom: 50px;
+    left: 50%;
+    right: -2em;
+    z-index: -5;
+
+    @include breakpoint($bp2) {
+      left: 60%;
+    }
+    
     @include breakpoint($bp3) {
-      margin-left: 2em;
-      padding-right: 2em;
-      width: auto;
+      left: 30%;
     }
-
-    &::after {
-      content: " ";
-      background-color: $primary-dark;
-      position: absolute;
-      top: 50px;
-      bottom: 50px;
-      left: 33%;
-      width: 100%;
-      z-index: -5;
-
-      @include breakpoint($bp3) {
-        left: 15%;
-      }
-    }
-
-    a {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      background-color: $trust-ltst;
-      padding: 2em;
-      border-radius: 5px;
-      width: 400px;
-      max-width: 100%;
-      text-decoration: none;
-      margin: 0.5em auto;
-      position: relative;
-
-      @include breakpoint($bp1) {
-        flex-wrap: nowrap;
-        height: 124px;
-        padding: 0 3em;
-      }
-
-      @include breakpoint($bp3) {
-        margin: 0.5em 0;
-      }
-
-      &:first-of-type {
-        margin-top: 0;
-      }
-
-      &:last-of-type {
-        margin-bottom: 0;
-      }
-
-      svg {
-        max-width: 30px;
-        max-height: 30px;
-        margin-bottom: 1em;
-
-        @include breakpoint($bp1) {
-          max-width: 50px;
-          max-height: 50px;
-          margin-right: 1em;
-          margin-bottom: 0;
-        }
-
-        @include breakpoint($bp2) {
-          position: absolute;
-          left: -40px;
-          max-width: 80px;
-          max-height: 80px;
-        }
-      }
-
-      span {
-        width: 100%;
-        text-align: center;
-        color: $primary-dark;
-        font-size: 1.25em;
-        font-weight: 600;
-
-        @include breakpoint($bp1) {
-          text-align: left;
-        }
-      }
+    
+    @include breakpoint($bp5) {
+      right: calc(  ( (100vw - 1600px) / -2 ) - 30px );
     }
   }
 }
+
