--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
@@ -1,23 +1,26 @@
-<div class="cta-banner-list">
-  <div class="cta-banner-list__text">
-    {% if title_1 %}
-      <p class="title first">{{ title_1 }}</p>
-    {% endif %}
-    {% if title_2 %}
-      <p class="title second">{{ title_2 }}</p>
-    {% endif %}
-    <p class="title third">{{ title_3 }}</p>
+<section class="cta-banner-list">
+  <div class="cta-banner-list__content">
+    <h1>
+      {% if title_1 %}
+        <span class="cta-banner-list__title first">{{ title_1 }}</span>
+      {% endif %}
+      {% if title_2 %}
+        <span class="cta-banner-list__title second">{{ title_2 }}</span>
+      {% endif %}
+        <span class="cta-banner-list__title third">{{ title_3 }}</span>
+    </h1>
     {% if subtitle %}
-      <p class="subtitle">{{ subtitle }}</p>
+      <h2 class="cta-banner-list__subtitle">{{ subtitle }}</h2>
     {% endif %}
-    <img src="../../images/th-mark.svg" />
+    <img class="cta-banner-list__background" src="../../images/th-mark.svg" />
   </div>
   <div class="cta-banner-list__buttons">
     {% for link in links %}
-      <a href="{{ link.url }}">
-        {% include link.icon %}
-        <span>{{ link.text }}</span>
-      </a>
+      {% include "@atoms/icon-button/icon-button.twig" with {
+        "url": link.url,
+        "icon": link.icon,
+        "text": link.text, 
+      } %}
     {% endfor %}
   </div>
-</div>
+</section>
