add utility nav and search

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -39,6 +39,26 @@ $main-menu-medium: 43em;
   @include breakpoint($main-menu-medium) {
     display: flex;
     border-bottom: none;
+    border-top: 4px solid $growth;
+    margin-top: 1.5em;
+    position: relative;
+    
+    &:after {
+      content: '';
+      display: block;
+      height: 1px;
+      border-top: 4px solid $growth;
+      position: absolute;
+      top: -4px;
+      left: 100%;
+      right: -2em;
+    }
+  }
+  
+  @include breakpoint($bp5) {
+    &:after {
+      right: calc( ((100vw - 1600px) / -2 ) - 38px);
+    }
   }
 }
 
