--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -1,17 +1,144 @@
 //  Empty
 .header {
-  padding-top: rhythm(.5);
+
 }
 
 .header__container {
   @include grid;
-  align-items: center;
 
   .figure {
+    padding-top: 1em;
     max-width: 250px;
   }
 
   .toggle-expand {
     margin-left: auto;
+  }
+  
+  @include breakpoint($bp3) {
+    align-items: stretch;
+    
+    .figure {
+      max-width: 300px;
+    }
+  }
+}
+
+.header__right {
+  
+  @include breakpoint($bp3) {
+    margin-left: auto;
+  }
+}
+
+.header__top {
+  
+  @include breakpoint($bp3) {
+   display: flex;
+   align-items: flex-start;
+   justify-content: flex-end;
+  }
+}
+
+// Utility Menu Styles
+.utility-menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.utility-menu__item {
+  display: inline-block;
+}
+
+.utility-menu__link {
+  @include adjust-font-size-to($label, .9);
+  display: inline-block;
+  padding: 1em .5em;
+  margin-right: 1em;
+  font-weight: 600;
+  
+  &:link,
+  &:visited {
+    color: $primary-dark;
+    text-decoration: none;
+  }
+  
+  &:active,
+  &:hover,
+  &:focus {
+    color: $trust-aa;
+    text-decoration: underline;
+  }
+}
+
+.utility-menu__link--mytower {
+  color: transparent;
+  background: url('../components/images/mytowerhealth-logo.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  
+  &:link,
+  &:visited {
+    color: transparent;
+  }
+  
+  &:active,
+  &:hover,
+  &:focus {
+    transform: scale(1.05);
+  }
+}
+
+.utility-menu__link--cta {
+  @extend %track-out;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: white;
+  background-color: $primary-dark;
+  padding: 1em 1em;
+  
+  &:link,
+  &:visited {
+    color: $white;
+  }
+  
+  &:active,
+  &:hover,
+  &:focus {
+    background-color: $trust-aa;
+    color: $white;
+    text-decoration: none;
+  }
+}
+
+// Search
+.header__search-form {
+  display: none;
+  visibility: hidden;
+}
+
+.search-toggle {
+  @include adjust-font-size-to($label, .9);
+  background-color: $trust-ltst;
+  border: 0;
+  box-shadow: none;
+  padding: 1em 1.25em .75em 1em;
+  
+  svg {
+    height: 1.5em;
+    width: 1.5em;
+    fill: $primary-dark;
+  }
+  
+  &:active,
+  &:hover,
+  &:focus {
+    background-color: $trust-aa;
+    
+    svg {
+      fill: $white;
+    }
   }
 }
